# 714220044_MochammadRayfanAqbillah

Hour2/: var2.rs  var4.rs  var7.rs  var8.rs  variable.rs
Hour3/: binding2.rs  binding4.rs  binding5.rs  binding6.rs  binding8.rs  binding9.rs
Hour4/: if1.rs  if2.rs  if4.rs  if6.rs  if7.rs
Hour5/: example51.rs  example52.rs  example53.rs  example54.rs  example55.rs  example56.rs
Hour6/: example63.rs  example64.rs  example65.rs  example66.rs
soal_1/Hour2/: var3.rs  var5.rs  var6.rs
soal_1/Hour3/: binding1.rs  binding3.rs  binding7.rs
soal_1/Hour4/: if3.rs  if5.rs  if8.rs
soal_1/Hour6/: example61.rs  example62.rs  example67.rs
soal_2/: borrowing.rs  clone.rs  copy.rs  dangling.rs  multiplemutablereferences.rs  mutable.rs  ownership.rs  refrence.rs  scope.rs  slice.rs
soal_3/: example1.rs  example10.rs  example2.rs  example3.rs  example4.rs  example5.rs  example6.rs  example7.rs  example8.rs  example9.rs
soal_4/: helper.rs  main.rs
soal_5/: Cargo.toml  README.md
soal_6/: Cargo.toml  README.md
soal_6/src/: main.rs
soal_7/: Cargo.toml  README.md
soal_7/src/: lib.rs  main.rs
soal_8/: .env
soal_8/src/configs/: config.rs
soal_8/src/routes/: route.rs
